# llm-agent-eval

./: .gitignore  Dockerfile  README.md  REFERENCES.md  project.yaml  pyproject.toml
.aitmpl/: context-card.md
.github/workflows/: validate.yml
.portfolio-control/: AGENT_HANDOFF.md  CRITICAL_PATH.md  DECISIONS.md  INVENTORY.md  QUALITY_GATES.md
benchmarks/results/: agent-eval-baseline.json
data/fixtures/: tasks.jsonl  traces.jsonl
openspec/: config.yaml
openspec/artifacts/: architecture-record.md  article-draft.md  benchmark-proof.md  component-pack.md  intent.md  portfolio-impact.md  reuse-delta.md  tasks.md  verification.md  voice-check.md
openspec/changes/baseline/: design.md  proposal.md  tasks.md
openspec/changes/baseline/specs/llm-agent-eval/: spec.md
sdd/: agent-handoff.md  architecture-decision.md  benchmark-plan.md  reuse-improvement-review.md  spec.md  technical-decision.md
src/llm_agent_eval/: cli.py
tests/: test_agent_eval.py
tools/: validate-project.ps1
