[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agent-eval"
version = "0.1.0"
description = "Local-first agent task evaluation with deterministic tools and success-rate metrics."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
llm-agent-eval = "llm_agent_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
