[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agent-eval"
version = "0.1.0"
description = "Local-first evaluation of supplied agent traces, expected outcomes, tool calls, latency, and cost."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
llm-agent-eval = "llm_agent_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
